--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -254,50 +254,87 @@ textarea:focus { outline:0 !important; }
 
 
 .modal {
-	border: 1px solid black;
 	position: fixed;
 	top: 0;
-	left: 0;
+    left: 0;
+    padding: 0.5rem;
 	right: 0;
 	bottom: 0;
 	width: 80%;
-	max-width: 500px;
-	max-height: 300px;
+	max-width: 350px;
+	max-height: 150px;
 	margin: auto;
 	background-color: white;
     display: block;
-	box-shadow: 0 0 10px 0 black;
 }
 
 
-/*form label{
-    display: block;
-    margin: auto;
-}*/
 .modal-header{
-    height: 20%;
-    width: 100%;
+    height: 10%;
+    margin-top:3%;
+    width: fit-content;
     position: absolute;
+    padding: 0.5rem;
     top:0;
+    left: 0;
     font-family: 'Nunito', sans-serif;
-background-color: #61D290;
-color: white;
+    color: black;
 }
 .modal-body{
-    height: 60%;
-    width: 100%;
+    top: 20%;
+    width: 350px;
+    height: 120px;
+    /* width: fit-content; */
     position: absolute;
-    bottom:20%;
     font-family: 'Nunito', sans-serif;
 }
-.modal-footer{
-    height: 20%;
-    width: 100%;
-    position: absolute;
-    bottom:0;
-background-color: #61D290;
+.modal-body ul{
+    display: block;
+    float: right;
+    border:  0;
+    margin: 0;
+    padding: 0;
+    margin-right: 0.3rem;
+}
+.modal-body ol li{
+    margin: 0.5rem;
+    display: block;
+}
+.modal-body ul li{
+    display: inline-block;
+}
+.modal-body label{
+display: inline-block;
 }
 
+.main-modal{
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-body ol{
+    display: inline-block;
+}
+.modal-body ol input{
+    padding: auto;
+    border-width: 1px;
+    border-radius: 5px;
+    display: inline-block;
+}
+.modal-body button{
+    width: fit-content;
+    border: 0;
+}
+.modal-body ul input{
+    border: 0;
+    background-color: green;
+}
 section h1{
     height:80%;
     font-size: 2rem;
@@ -310,20 +347,6 @@ section h1{
     text-align: center;
 }
 
-
-.form-content input{
-    display: block;
-    margin-top: 4px;
-    margin-left: auto;
-    margin-right: auto;
-}
-form label{
-    display: block;
-    margin-left: auto;
-    margin-top: 4px;
-    margin-right: auto;
-    text-align: center;
-}
 .modal-register-button{
 margin-left: auto;
 margin-top: 20px;
@@ -391,4 +414,29 @@ header img{
     /*margin: 1px;*/
     margin: 0.4rem;
 }
+
+
+.modal{
+    position: fixed;
+	top: 0;
+    left: 0;
+    padding: 0.5rem;
+	right: 0;
+	bottom: 0;
+	width: 80%;
+	max-width: 100%;
+	max-height: 80%;
+	margin: auto;
+	background-color: white;
+    display: block;
+}
+.modal-body{
+    top: 20%;
+    /* width: 350px;
+    height: 120px; */
+    position: absolute;
+    font-family: 'Nunito', sans-serif;
+}
+
+
 }
