--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -248,8 +248,7 @@ textarea:focus { outline:0 !important; }
     background-color:  #F6F6F6;
     height: 8%;
     width: 100%;
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    /*overflow-y: hidden;  Add vertical scrollbar */
+    overflow-x: hidden;
 }
 
 
@@ -371,7 +370,32 @@ dl dt img{
     margin-right: 0.2rem;
     display: inline-block;
 }
+.modal-body-mobile{
+    display: none;
+    position: absolute;
+    top: 20%;
+    width: 350px;
+    height: 120px;
+    font-family: 'Nunito', sans-serif;
+}
 
+.modal-body-mobile ol{
+    display: inline-block;
+}
+.modal-body-mobile ol input{
+    padding: auto;
+    border-width: 1px;
+    border-radius: 5px;
+    display: inline-block;
+}
+.modal-body-mobile button{
+    width: fit-content;
+    border: 0;
+}
+.modal-body-mobile ul input{
+    border: 0;
+    background-color: green;
+}
 
 @media screen and (max-width: 500px), screen and (max-height: 500px){
 .leftNav{
@@ -430,13 +454,13 @@ header img{
 	background-color: white;
     display: block;
 }
-.modal-body{
-    top: 20%;
-    /* width: 350px;
-    height: 120px; */
-    position: absolute;
-    font-family: 'Nunito', sans-serif;
+.modal-header{
+    margin: 1rem;
 }
-
-
+.modal-body-mobile{
+    display: block;
+}
+.modal-body{
+    display: none;
+}
 }
