--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -71,7 +71,7 @@ table {
     height: 90%;
     float: right;
     width: 85%;
-    background-color:white;
+    background-color:#F6F6F6;
 }
 .material-icons{
 position: relative;
@@ -426,92 +426,104 @@ dl dt img{
     background-color: green;
 }
 
-@media screen and (max-width: 500px), screen and (max-height: 500px){
-.leftNav{
-width: 0%;
-}
-.mainChat{
-    width: 100%;
-}
-.send-img{
-    background-color: #F6F6F6;
-}
-.ta{
-    overflow-x: hidden;
-    position: absolute;
-    height: 98%;
-    border-radius: 2rem;
-    float: left;
-    padding: 0;
-    font-size: 1rem;
-    width: 80%;
-    border: solid 1px #EBEDEC;
-    resize: none;
-}
-.sendbtn{
-    background-color: #F6F6F6;
-    padding: 0.5rem;
-    width: 18%;
-}
-.send-img{
-    width: 3rem;
-    height: 2.5rem;
-}
-/*.write-msg-area{
-border: 0;
-}*/
-header img{
-    position: absolute;
-    width: 6.5rem;
-    /*margin: 1px;*/
-    margin: 0.4rem;
+@media screen and (max-width: 638px), screen and (max-height: 638px){
+    .leftNav{
+        width: 0%;
+        }
+        .mainChat{
+            width: 100%;
+        }
+        .sendbtn{
+            background-color: #F6F6F6;
+            padding: 0.5rem;
+            width: 18%;
+        }
+        .send-img{
+            width: 3rem;
+            height: 2.5rem;
+        }
+        .send-img{
+            background-color: #F6F6F6;
+        }
+        header img{
+            position: absolute;
+            width: 6.5rem;
+            /*margin: 1px;*/
+            margin: 0.4rem;
+        }
+        .modal{
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding: 0.5rem;
+            right: 0;
+            bottom: 0;
+            width: 80%;
+            max-width: 100%;
+            max-height: 80%;
+            margin: auto;
+            background-color: white;
+            display: block;
+        }
+        .modal-header{
+            margin: 1rem;
+        }
+        .modal-body-mobile{
+            display: block;
+        }
+        .modal-body{
+            display: none;
+        }
+        .modal-body-mobile ol li{
+            margin: 0.5rem;
+            margin-left: 1rem;
+        }
+        .modal-body-mobile ol li input{
+            display: block;
+            margin: 0.5rem;
+            margin-left: 0rem;
+        }
+
+        .modal-body-mobile ul{
+            position: absolute;
+            bottom: 4%;
+            right: 10%;
+        }
+        .modal-body-mobile{
+            width: 300px;
+            height: 370px;
+        }
+        .modal-body-mobile ul li{
+            display: inline-block;
+        }
+        .ta{
+            overflow-x: hidden;
+            position: absolute;
+            height: 98%;
+            border-radius: 2rem;
+            float: left;
+            padding: 0;
+            font-size: 1rem;
+            width: 80%;
+            border: solid 1px #EBEDEC;
+            resize: none;
+        }
 }
 
+@media screen and (max-width: 320px), screen and (max-height: 320px){
+    .massageArea{
+        margin-top: 35px;
+        height: 74%;
+    }
+.chat-nav h2{
+font-size: 1.2rem;
+}
+        .chat-nav{
+            height: 35px;
+        }
 
-.modal{
-    position: fixed;
-	top: 0;
-    left: 0;
-    padding: 0.5rem;
-	right: 0;
-	bottom: 0;
-	width: 80%;
-	max-width: 100%;
-	max-height: 80%;
-	margin: auto;
-	background-color: white;
-    display: block;
-}
-.modal-header{
-    margin: 1rem;
-}
-.modal-body-mobile{
-    display: block;
-}
-.modal-body{
-    display: none;
-}
-.modal-body-mobile ol li{
-    margin: 0.5rem;
-    margin-left: 1rem;
-}
-.modal-body-mobile ol li input{
-    display: block;
-    margin: 0.5rem;
-    margin-left: 0rem;
-}
-
-.modal-body-mobile ul{
-    position: absolute;
-    bottom: 4%;
-    right: 10%;
-}
-.modal-body-mobile{
-    width: 330px;
-    height: 380px;
-}
-.modal-body-mobile ul li{
-    display: inline-block;
-}
-
+        .modal-body-mobile{
+            width: 270px;
+            height: 300px;
+        }
 }
