--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -113,19 +113,11 @@ dl dt{
     padding-left: 0.3rem;
     padding-top: 0.3rem;
 }
-
-/*.header-chat{
-    position: absolute;
-    top: 0;
-    height: 10%;
-    width: 100%;
-}*/
 .msgs{
     position: absolute;
     bottom: 0;
     overflow-x: hidden;
     overflow-y: scroll;
-    /*padding-top: 1rem;*/
     height: 100%;
     width: 100%;
 }
@@ -178,9 +170,8 @@ p{
     background-color: #F6F6F6;
     border-top: solid 1px #EBEDEC;
 }
-textarea{
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    /*overflow-y: scroll;  Add vertical scrollbar */
+.ta{ /* textarea */
+    overflow-x: hidden;
     position: absolute;
     margin:0;
     bottom: 0;
@@ -224,40 +215,33 @@ ol li article:hover .close-msg{
     padding: 0;
     background-color: white;
     font-size: 0;
-    /* font-size: 0.7rem; */
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     float: right;
-    /* position:absolute;
-    left:-10000px; */
 }
 .msgs article:focus{
     outline:0;
     background-color: #EBEDEC;
 }
 .msgs article:focus .close-msg{
-    /* position: inline; */
     background-color: #EBEDEC;
     display: inline;
     font-size: 0.7rem;
 }
 .msgs article .close-msg:focus {
-    /* position: inline; */
     background-color: #EBEDEC;
     display: inline;
     font-size: 0.7rem;
 }
 .massageArea{
-    /*margin-bottom: solid 0.5rem #F6F6F6;*/
     margin-top: 0.5rem;
     border-bottom: solid 1px #EBEDEC;
     position: absolute;
     height: 72%;
     bottom: 20%;
-    /*max-height: 500px;*/
     width: 100%;
     background-color:  #F6F6F6;
-    overflow-x: hidden;  /*Hide horizontal scrollbar */
+    overflow-x: hidden;
 }
 button:focus { outline:0 !important; }
 textarea:focus { outline:0 !important; }
@@ -269,8 +253,6 @@ textarea:focus { outline:0 !important; }
     width: 100%;
     overflow-x: hidden;
 }
-
-
 .modal {
 	position: fixed;
 	top: 0;
@@ -285,8 +267,6 @@ textarea:focus { outline:0 !important; }
 	background-color: white;
     display: block;
 }
-
-
 .modal-header{
     height: 10%;
     margin-top:3%;
@@ -302,7 +282,6 @@ textarea:focus { outline:0 !important; }
     top: 20%;
     width: 350px;
     height: 120px;
-    /* width: fit-content; */
     position: absolute;
     font-family: 'Nunito', sans-serif;
 }
@@ -332,20 +311,9 @@ display: inline-block;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
-
-/*  */
-
-/* .close-msg{
-    position:absolute;
-    left:-10000px;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-} */
 .modal-body ol{
     display: inline-block;
 }
