--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -109,7 +109,7 @@ table {
     top: 0;
 }
 
-.mainChat{
+.Chat{
     position: absolute;
     bottom: 0;
     right: 0;
@@ -151,7 +151,7 @@ dl dt{
     display: inline-block;
 }
 
-.chat-nav h2{
+.Chat-nav h2{
     position: absolute;
     left: 0;
     top:0;
@@ -207,7 +207,7 @@ ol li article{
 p{
     font-family: 'Nunito', sans-serif;
 }
-.write-msg-area{
+.WriteMsg{
     width: 100%;
     height: 20%;
     margin: 0;
@@ -217,7 +217,7 @@ p{
     background-color: #F6F6F6;
     border-top: solid 1px #EBEDEC;
 }
-.ta{ /* textarea */
+.WriteMsg-textarea{ /* textarea */
     overflow-x: hidden;
     position: absolute;
     margin:0;
@@ -232,7 +232,7 @@ p{
     border: 0;
     resize: none;
 }
-.sendbtn{
+.WriteMsg-sendbtn{
     position: absolute;
     right: 0;
     background-color: white;
@@ -280,7 +280,7 @@ ol li article:hover .close-msg{
     display: inline;
     font-size: 0.7rem;
 }
-.massageArea{
+.MassageArea{
     margin-top: 0.5rem;
     border-bottom: solid 1px #EBEDEC;
     position: absolute;
@@ -292,7 +292,7 @@ ol li article:hover .close-msg{
 }
 button:focus { outline:0 !important; }
 textarea:focus { outline:0 !important; }
-.chat-nav{
+.Chat-nav{
     position: absolute;
     top:0;
     background-color:  #F6F6F6;
@@ -300,7 +300,7 @@ textarea:focus { outline:0 !important; }
     width: 100%;
     overflow-x: hidden;
 }
-.modal {
+.Modal {
 	position: fixed;
 	top: 0;
     left: 0;
@@ -314,7 +314,7 @@ textarea:focus { outline:0 !important; }
 	background-color: white;
     display: block;
 }
-.modal-header{
+.Modal-header{
     height: 10%;
     margin-top:3%;
     width: fit-content;
@@ -325,14 +325,14 @@ textarea:focus { outline:0 !important; }
     font-family: 'Nunito', sans-serif;
     color: black;
 }
-.modal-body{
+.Modal-body{
     top: 20%;
     width: 350px;
     height: 120px;
     position: absolute;
     font-family: 'Nunito', sans-serif;
 }
-.modal-body ul{
+.Modal-body ul{
     display: block;
     float: right;
     border:  0;
@@ -340,18 +340,18 @@ textarea:focus { outline:0 !important; }
     padding: 0;
     margin-right: 0.3rem;
 }
-.modal-body ol li{
+.Modal-body ol li{
     margin: 0.5rem;
     display: block;
 }
-.modal-body ul li{
+.Modal-body ul li{
     display: inline-block;
 }
-.modal-body label{
+.Modal-body label{
 display: inline-block;
 }
 
-.main-modal{
+.MainModal{
     position: fixed;
     z-index: 1;
     left: 0;
@@ -361,20 +361,20 @@ display: inline-block;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
-.modal-body ol{
+.Modal-body ol{
     display: inline-block;
 }
-.modal-body ol .saver{
+.Modal-body ol .saver{
     padding: auto;
     border-width: 1px;
     border-radius: 5px;
     display: inline-block;
 }
-.modal-body button{
+.Modal-body button{
     width: fit-content;
     border: 0;
 }
-.modal-body ul .saver{
+.Modal-body ul .saver{
     border: 0;
     width: 50px;
     background-color: green;
@@ -395,7 +395,7 @@ section h1{
     text-align: center;
 }
 
-.modal-register-button{
+.Modal-register-button{
 margin-left: auto;
 margin-top: 20px;
     margin-right: auto;
@@ -406,7 +406,7 @@ dl dt span{
     size: 0.3rem;
     font-size: 1.3rem;
 }
-.modal-close-button{
+.Modal-close-button{
 margin-left: auto;
     margin-right: auto;
     margin-top: 9px;
@@ -419,7 +419,7 @@ dl dt img{
     margin-right: 0.2rem;
     display: inline-block;
 }
-.modal-body-mobile{
+.Modal-body-mobile{
     display: none;
     position: absolute;
     top: 20%;
@@ -428,20 +428,20 @@ dl dt img{
     font-family: 'Nunito', sans-serif;
 }
 
-.modal-body-mobile ol{
+.Modal-body-mobile ol{
     display: inline-block;
 }
-.modal-body-mobile ol .saver{
+.Modal-body-mobile ol .saver{
     padding: auto;
     border-width: 1px;
     border-radius: 5px;
     display: inline-block;
 }
-.modal-body-mobile button{
+.Modal-body-mobile button{
     width: fit-content;
     border: 0;
 }
-.modal-body-mobile ul .saver{
+.Modal-body-mobile ul .saver{
     border: 0;
     background-color: green;
 }
@@ -450,10 +450,10 @@ dl dt img{
     .leftNav{
         width: 0%;
         }
-        .mainChat{
+        .Chat{
             width: 100%;
         }
-        .sendbtn{
+        .WriteMsg-sendbtn{
             background-color: #F6F6F6;
             padding: 0.5rem;
             width: 18%;
@@ -485,38 +485,37 @@ dl dt img{
             background-color: white;
             display: block;
         }
-        .modal-header{
+        .Modal-header{
             margin: 1rem;
         }
-        .modal-body-mobile{
+        .Modal-body-mobile{
             display: block;
+            width: 300px;
+            height: 370px;
         }
-        .modal-body{
+        .Modal-body{
             display: none;
         }
-        .modal-body-mobile ol li{
+        .Modal-body-mobile ol li{
             margin: 0.5rem;
             margin-left: 1rem;
         }
-        .modal-body-mobile ol li .saver{
+        .Modal-body-mobile ol li .saver{
             display: block;
             margin: 0.5rem;
             margin-left: 0rem;
         }
-
-        .modal-body-mobile ul{
+        .Modal-body-mobile ul li{
+            display: inline-block;
+        }
+        .Modal-body-mobile ul{
             position: absolute;
             bottom: 4%;
             right: 10%;
         }
-        .modal-body-mobile{
-            width: 300px;
-            height: 370px;
-        }
-        .modal-body-mobile ul li{
-            display: inline-block;
-        }
-        .ta{
+
+
+        .WriteMsg-ta{
             overflow-x: hidden;
             position: absolute;
             height: 98%;
@@ -531,18 +530,18 @@ dl dt img{
 }
 
 @media screen and (max-width: 320px), screen and (max-height: 320px){
-    .massageArea{
+    .MassageArea{
         margin-top: 35px;
         height: 74%;
     }
-.chat-nav h2{
+.Chat-nav h2{
 font-size: 1.2rem;
 }
-        .chat-nav{
+        .Chat-nav{
             height: 35px;
         }
 
-        .modal-body-mobile{
+        .Modal-body-mobile{
             width: 270px;
             height: 300px;
         }
